--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
 # OCR
 paddlepaddle==2.6.1 ; platform_system != "Darwin" or platform_machine != "arm64"
-paddleocr==2.7.0.3
+paddleocr==2.7.3
 
 # PDF
 pdf2image==1.17.0
-Pillow==10.4.0
-pymupdf==1.22.5
+pillow==11.3.0
+pymupdf==1.26.3
 
 # AI / LangChain
-langchain==0.2.16
+langchain==0.3.27
+langchain-google-genai==2.1.9
 google-generativeai==0.8.3
-langchain-google-genai==2.0.1
 
 # Utils
-python-dotenv==1.0.1
-pydantic==2.9.2
-rapidfuzz==3.9.7
-dateparser==1.2.0
-rich==13.9.2
-tqdm==4.66.5
+python-dotenv==1.1.1
+pydantic==2.11.7
+rapidfuzz==3.13.0
+dateparser==1.2.2
+regex==2025.7.34
+numpy==1.24.4
 typer==0.12.5
-regex==2024.9.11
-numpy==1.26.2
+tqdm==4.67.1
+rich==13.9.2
